<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#050505"
    android:layout_height="match_parent"
    tools:context=".MathActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/math_secound_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="00:20"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/math_arrow_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/arrow_white"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/math_questionNumber_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="  1/5 নম্বর প্রশ্ন"
            android:textAlignment="center"
            android:textColor="#F30B0B"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18dp"
            android:visibility="invisible"
            android:id="@+id/math_selectedOption_id"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/math_questionNumber_id"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/math_Optionlayout"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="সঠিক উত্তর : "
                android:textColor="@color/white"
                android:textSize="18dp"
                android:visibility="visible"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:id="@+id/math_correctAnswer_id"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/math_Questionlayout"
            android:layout_below="@+id/math_Optionlayout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math_question_1"
                android:background="@drawable/questionshape"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:id="@+id/math_question_id"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/math_Questionlayout"
            android:id="@+id/math_option_list_layout_id"
            android:gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/math_optionA"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_background"
                android:textColor="@color/black"
                android:text="@string/math_question_1_A"
                android:gravity="center"
                android:textSize="18dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/math_optionB"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_background"
                android:textColor="@color/black"
                android:text="@string/math_question_1_B"
                android:gravity="center"
                android:textSize="18dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/math_optionC"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_background"
                android:textColor="@color/black"
                android:text="@string/math_question_1_C"
                android:gravity="center"
                android:textSize="18dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/math_optionD"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_background"
                android:textColor="@color/black"
                android:text="@string/math_question_1_D"
                android:gravity="center"
                android:textSize="18dp"
                android:textAlignment="center"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/math_option_list_layout_id"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/math_score_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="Score "
                android:textSize="16dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                />
            <ProgressBar
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:id="@+id/math_progressBar_id"
                android:backgroundTint="#ffa384"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:indeterminate="false"
                />

        </LinearLayout>







    </RelativeLayout>
</ScrollView>